Causeview Package Complete/ant script/retrieveUnpackaged/objects/Volunteer_Application__c.object
<CustomObject>
    <description>Used to manage and review the Applications submitted by Volunteers</description>
    <fields>
        <fullName>Agree2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box when the applicant agrees to liability release terms of volunteer position.</description>
        <label>Agree to Volunteer Liability Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box when the applicant agrees to terms and conditions of volunteer position.</description>
        <label>Agree to Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <description>Volunteer&apos;s alternate phone number.</description>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Background_Check_Notes__c</fullName>
        <description>Notes related to the applicant&apos;s background check.</description>
        <label>Background Check Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Background_Visual__c</fullName>
        <description>Icon dependent upon background check status.</description>
        <formula>IMAGE(IF(  ISPICKVAL(Status_Background__c, &quot;Completed&quot;),  &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_ok.png&quot;,
IF(ISPICKVAL(Status_Background__c, &quot;Not Required&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_na.png&quot;, 
IF(ISPICKVAL(Status_Background__c, &quot;To Be Done&quot;),  &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_lock.png&quot;,
IF(ISPICKVAL(Status_Background__c, &quot;Completed - Issue&quot;),  &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_cancel.png&quot;,
&quot;http://api.causeview.com/ActionPages/Hosted/icons/button_lock.png&quot; )))), &quot;alt text&quot;, 22, 22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Background Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <description>Applicant employment status (Yes, No, Retired, Self-Employed, Other)</description>
        <label>Currently Employed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Background_Check__c</fullName>
        <description>MM/DD/YYYY</description>
        <inlineHelpText>The date the background check was completed</inlineHelpText>
        <label>Date of Background Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Program_Specific_Training__c</fullName>
        <description>Date the program training was completed (MM/DD/YYYY)</description>
        <label>Date of Program Specific Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Reference_Check__c</fullName>
        <description>MM/DD/YYYY</description>
        <inlineHelpText>The date the reference check was completed.</inlineHelpText>
        <label>Date of Reference Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Work__c</fullName>
        <description>Applicant employment description.</description>
        <label>Description of Work</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_criminal_record__c</fullName>
        <description>Applicant response (Yes, No)</description>
        <label>Do you have a Criminal Record</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_your_Organization_Offer_any_of_the__c</fullName>
        <description>Details of organization programs (Corporate Gift Matching, Employee Directed Grants, In-Kind Donation Program).</description>
        <label>Does Your Organization Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Gift Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Directed Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Donation for Volunteer Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <description>Applicant&apos;s completed level of education</description>
        <inlineHelpText>The highest level of education achieved</inlineHelpText>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>High School/GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade/Vocational School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_Program__c</fullName>
        <description>Name of educational program or major.</description>
        <label>Educational Program Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>Phone number for the emergency contact.</description>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <description>The relationship between the applicant and the emergency contact.</description>
        <label>Relationship</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>Emergency contact&apos;s name.</description>
        <label>Emergency Contact</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Background_Check_Status__c</fullName>
        <description>A Summary of all the different background checks to give an overall Green or Amber.</description>
        <formula>IMAGE( IF( OR(  RecordTypeId != &apos;012d0000000siPV&apos;   ,AND( OR( ISPICKVAL( Status_Background__c , &quot;&quot; ), ISPICKVAL( Status_Background__c , &quot;Completed&quot; ), ISPICKVAL( Status_Background__c , &quot;Not Required&quot; )))), &quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000pNHB&amp;oid=00Dd0000000e4Cd&quot;, &quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000pNHu&amp;oid=00Dd0000000e4Cd&quot;), &quot;&quot;, 30, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Dep) Application Screening Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <description>Applicant&apos;s method of discovering the organization and volunteer opportunity.</description>
        <label>How Did You Hear About Us</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church/Synagogue/Mosque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place of Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School/College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <description>Language skills the applicant has.</description>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASL American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burmese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swahili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Miles_Willing_to_Travel_One_Way__c</fullName>
        <description>Distance the applicant is willing to travel to volunteer, one way, in miles.</description>
        <label>Miles Willing to Travel (One Way)</label>
        <picklist>
            <picklistValues>
                <fullName>10 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wherever there is a need</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Educational_Institution__c</fullName>
        <description>The name of the education institution the applicant attended.</description>
        <inlineHelpText>The name of the educational institution you attended</inlineHelpText>
        <label>Name of  Educational Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Roles__c</fullName>
        <description>Number of positions.</description>
        <label>Number of Roles</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Service_Hours_Involved__c</fullName>
        <description>Service hours involved in the volunteer role</description>
        <formula>Volunteer_Role__r.Number_of_Service_Hours_Involved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Service Hours Involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_Date__c</fullName>
        <description>End date</description>
        <label>Opportunity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Start_Date__c</fullName>
        <description>Start date</description>
        <label>Opportunity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Training_Status__c</fullName>
        <description>Status of the applicant&apos;s training.</description>
        <formula>IMAGE( IF( OR( RecordTypeId != &apos;012d0000000siPV&apos; , AND( OR( ISPICKVAL( Program_Specific_Training_Status__c, &quot;Completed&quot; ), ISPICKVAL( Program_Specific_Training_Status__c, &quot;Not Required&quot; )))), &quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000pNHB&amp;oid=00Dd0000000e4Cd&quot;, &quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000pNHu&amp;oid=00Dd0000000e4Cd&quot;), &quot;&quot;, 30, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Dep) Application Training Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Volunteer_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Parent Application for the Group Opportunity</inlineHelpText>
        <label>Parent Volunteer Application</label>
        <referenceTo>Volunteer_Application__c</referenceTo>
        <relationshipLabel>Volunteer Applications</relationshipLabel>
        <relationshipName>Volunteer_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Place_of_Employment__c</fullName>
        <description>Name of organization where the applicant is employed.</description>
        <label>Place of Employment</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefered_Locales__c</fullName>
        <description>Locations where the applicant would prefer to volunteer</description>
        <inlineHelpText>Preferred Area(s) for Volunteer Opportunities</inlineHelpText>
        <label>Preferred Locale(s)</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Professional_Skills__c</fullName>
        <description>Professional skills the applicant has.</description>
        <label>Professional Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to Lift Heavy Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Graphic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Data Entry and Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Expert MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Intermediate MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Arts/Chef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Software Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL English as Second Language Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpersonal Skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Program_Specific_Training_Status__c</fullName>
        <description>Status of training (Not Required, To Be Done, Completed).</description>
        <label>Program Specific Training Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Specific_Training_Visual__c</fullName>
        <description>Training the volunteer must undergo for the specific volunteer program.</description>
        <formula>IMAGE(IF( ISPICKVAL(Program_Specific_Training_Status__c, &quot;Completed&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_ok.png&quot;, 
IF(ISPICKVAL(Program_Specific_Training_Status__c, &quot;Not Required&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_na.png&quot;, 
IF(ISPICKVAL(Program_Specific_Training_Status__c, &quot;To Be Done&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_lock.png&quot;, 
IF(ISPICKVAL(Program_Specific_Training_Status__c, &quot;Completed - Issue&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_cancel.png&quot;, 
&quot;http://api.causeview.com/ActionPages/Hosted/icons/button_lock.png&quot; )))), &quot;alt text&quot;, 22, 22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Specific Training</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs_Offered_by_Employer__c</fullName>
        <description>Details of organization programs for applicant&apos;s employer (Corporate Gift Matching, Employee Directed Grants, In-Kind Donation Program).</description>
        <label>Programs Offered by Employer</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Gift Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Directed Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Donation Program</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Decline__c</fullName>
        <description>Reason for declining the individual&apos;s application.</description>
        <label>Reason for Decline</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Background Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Applicant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Exit__c</fullName>
        <description>Reason for exiting the volunteer position to which the application refers.</description>
        <label>Reason for Exit</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Schedule Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Change (Back to school, family or personal illness, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going to a different program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaving Catholic Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Volunteering__c</fullName>
        <description>Reason the applicant would like to volunteer for the role.</description>
        <label>Reasons for Volunteering</label>
        <picklist>
            <picklistValues>
                <fullName>Care About the Cause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establish Work Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in Community Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet People and Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ref_Email_1__c</fullName>
        <description>Email for the first reference.</description>
        <label>Reference 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ref_Email_2__c</fullName>
        <description>Email for the second email.</description>
        <label>Reference 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ref_Email_3__c</fullName>
        <description>Email for the third reference.</description>
        <label>Reference 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ref_Phone_1__c</fullName>
        <description>Phone number for the first reference.</description>
        <label>Reference 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ref_Phone_2__c</fullName>
        <description>Phone number for the second reference.</description>
        <label>Reference 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ref_Phone_3__c</fullName>
        <description>Phone number for the third reference.</description>
        <label>Reference 3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_1__c</fullName>
        <description>The name of a first reference.</description>
        <label>Reference 1</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2__c</fullName>
        <description>The name of a second reference.</description>
        <label>Reference 2</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3__c</fullName>
        <description>The name of a third reference.</description>
        <label>Reference 3</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Check_Notes__c</fullName>
        <description>Notes on the applicant&apos;s reference check.</description>
        <label>Reference Check Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Check_Status__c</fullName>
        <description>Status of the applicant&apos;s reference check.</description>
        <formula>IMAGE( IF( OR( RecordTypeId != &apos;012d0000000siPV&apos; ,OR( ISPICKVAL( Status_Reference__c , &quot;Completed&quot; ), ISPICKVAL( Status_Reference__c , &quot;Not Required&quot; ), ISPICKVAL( Status_Reference__c , &quot;&quot; ))), &quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000pNHB&amp;oid=00Dd0000000e4Cd&quot;, &quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000pNHu&amp;oid=00Dd0000000e4Cd&quot;), &quot;&quot;, 30, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Dep) Application Reference Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Type1__c</fullName>
        <description>Type of reference for the applicant&apos;s first reference</description>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-worker or professional colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member of an Educational Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastor / Faith Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Present or Former Employer / Agency</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reference_Type2__c</fullName>
        <description>Type of reference for the applicant&apos;s second reference.</description>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-worker or professional colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member of an Educational Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastor / Faith Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Present or Former Employer / Agency</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reference_Type3__c</fullName>
        <description>Type of reference for the applicant&apos;s third reference.</description>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-worker or professional colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member of an Educational Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastor / Faith Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Present or Former Employer / Agency</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reference_Visual__c</fullName>
        <description>Visualization of the applicant&apos;s reference check status</description>
        <formula>IMAGE(IF( ISPICKVAL(Status_Reference__c, &quot;Completed&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_ok.png&quot;, 
IF(ISPICKVAL(Status_Reference__c, &quot;Not Required&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_na.png&quot;, 
IF(ISPICKVAL(Status_Reference__c, &quot;To Be Done&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_lock.png&quot;, 
IF(ISPICKVAL(Status_Reference__c, &quot;Completed - Issue&quot;), &quot;http://api.causeview.com/ActionPages/Hosted/icons/button_cancel.png&quot;, 
&quot;http://api.causeview.com/ActionPages/Hosted/icons/button_lock.png&quot; )))), &quot;alt text&quot;, 22, 22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>References</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Location__c</fullName>
        <label>Role Location(s)</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Volunteer_Role__r.Name</formula>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Exit_Date__c</fullName>
        <description>Date the volunteer stopped volunteering in the role to which the application relates</description>
        <label>Service Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Defines how the volunteer application record was created.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Online Actionform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Background__c</fullName>
        <description>Status of applicant&apos;s background check (Not Required, To Be Done, Completed - Issue, Completed).</description>
        <label>Background Check Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Reference__c</fullName>
        <description>Status of the applicant&apos;s reference check.</description>
        <label>Reference Check Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>